fixed dropdown menus on mobile navigation menus

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Smartline Lite
 Theme URI: https://themezee.com/themes/smartline/
 Description: Smartline Lite is a perfect theme for news and magazine websites as well as simple blogs. The responsive design with bold colors and smart lines looks great on any device. The main highlight of Smartline is the flexible and widgetized front page template which allows you to create a magazine-styled homepage with ease.
-Version: 1.3.9
+Version: 1.4.0
 Author: ThemeZee
 Author URI: https://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-colors, custom-header, custom-menu, editor-style, blog, news, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, silver, white, gray
@@ -10,7 +10,6 @@ Text Domain: smartline-lite
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 ======================================*/
-
 
 /* CSS Reset | http://meyerweb.com/eric/tools/css/reset/ | v2.0
 -------------------------------------------------------------- */
@@ -1628,16 +1627,19 @@ embed, iframe, object, video {
 		border: none;
 		box-shadow: none;
 		background: none;
-		top: 0;
-		left: 0;
+		top: auto;
+		left: auto;
 	}
+	.main-navigation-menu li,
 	.main-navigation-menu ul,
+	.main-navigation-menu li ul ul,
 	.mega-menu-item .mega-menu-content,
 	.mega-menu-item .mega-menu-content .mega-menu-widget {
 		position: static;
 		display: block;
 		left: auto;
 		top: auto;
+		clear: left;
 	}
 
 	#mainnav {
